# parallel-wasm-rust

./: .gitignore  Cargo.toml  README.md  index.html  index.js  package-lock.json  package.json  wasm-worker.js
src/: lib.rs
