[package]
name = "plane-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.74"
rayon = { version = "1.5"}
wasm-bindgen-rayon = {version = "1.0"}
getrandom = { version = "0.2.2", features = ["js"] }
rand = "0.8.3"

[lib]
crate-type = ["cdylib"]